# gestock_data_analysis

./: .gitignore  DATA_ANALYSIS_README.md  README.md  pyproject.toml
data/mock_data_generators/: README.md  generate_base_data.py  generate_businesses.py  generate_products.py  generate_transactional_data.py  generate_transactions.py  generate_users.py  generate_warehouse_products.py  generate_warehouses.py
data/processed/: README.md
data/raw/: README.md
notebooks/: README.md
reports/: 01_exploratory_analysis.html
src/: __init__.py
